; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/ttm/extr_ttm_tt.c_ttm_dma_tt_fini.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/ttm/extr_ttm_tt.c_ttm_dma_tt_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ttm_dma_tt = type { i32*, %struct.ttm_tt }
%struct.ttm_tt = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ttm_dma_tt_fini(%struct.ttm_dma_tt* %0) #0 {
  %2 = alloca %struct.ttm_dma_tt*, align 8
  %3 = alloca %struct.ttm_tt*, align 8
  store %struct.ttm_dma_tt* %0, %struct.ttm_dma_tt** %2, align 8
  %4 = load %struct.ttm_dma_tt*, %struct.ttm_dma_tt** %2, align 8
  %5 = getelementptr inbounds %struct.ttm_dma_tt, %struct.ttm_dma_tt* %4, i32 0, i32 1
  store %struct.ttm_tt* %5, %struct.ttm_tt** %3, align 8
  %6 = load %struct.ttm_tt*, %struct.ttm_tt** %3, align 8
  %7 = getelementptr inbounds %struct.ttm_tt, %struct.ttm_tt* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = call i32 @drm_free_large(i32* %8)
  %10 = load %struct.ttm_tt*, %struct.ttm_tt** %3, align 8
  %11 = getelementptr inbounds %struct.ttm_tt, %struct.ttm_tt* %10, i32 0, i32 0
  store i32* null, i32** %11, align 8
  %12 = load %struct.ttm_dma_tt*, %struct.ttm_dma_tt** %2, align 8
  %13 = getelementptr inbounds %struct.ttm_dma_tt, %struct.ttm_dma_tt* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = call i32 @drm_free_large(i32* %14)
  %16 = load %struct.ttm_dma_tt*, %struct.ttm_dma_tt** %2, align 8
  %17 = getelementptr inbounds %struct.ttm_dma_tt, %struct.ttm_dma_tt* %16, i32 0, i32 0
  store i32* null, i32** %17, align 8
  ret void
}

declare dso_local i32 @drm_free_large(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
